# booking-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py
Downloads/GraphRAG/: app.py
core/: agent.py  chainlit.py  graphdb.py  main.py  pipeline.py  query.py
core/recommendation/: constants.py  extractor.py  helpers.py  query_engine.py  secrets.py  storage.py  visualization.py
core/recommendations/: base.py  cypher_graph.py  graph_rag.py
data/: vn_hotels_reviews.parquet  vn_hotels_users.parquet
experiments/: address.csv  chatbot.ipynb  data_cleaning.ipynb  descriptions.csv  graphrag.ipynb  transform.ipynb
experiments/data/: bookings.parquet
recommendation/: constants.py  extractor.py  main.py  query_engine.py  storage.py  visualization.py
scraper/: README  pyproject.toml  setup.py
scraper/booking/: _constants.py  run.py  transform.py  utils.py
scraper/booking/models/: base.py  hotels.py  reviews.py  scraper.py  users.py
scraper/booking/output/: vn_hotels.parquet  vn_hotels_reviews.parquet
